crates/test-ui/ui/measurement_generic.stderr
error[E0599]: the associated function or constant `initWithDoubleValue_unit` exists for struct `NSMeasurement<NSObject>`, but its trait bounds were not satisfied
 --> ui/measurement_generic.rs
  |
  |     let mass = NSMeasurement::<NSObject>::initWithDoubleValue_unit(
  |                                           ^^^^^^^^^^^^^^^^^^^^^^^^ associated function or constant cannot be called on `NSMeasurement<NSObject>` due to unsatisfied trait bounds
  |
 ::: $WORKSPACE/crates/objc2/src/runtime/nsobject.rs
  |
  | pub struct NSObject {
  | ------------------- doesn't satisfy `NSObject: AsRef<NSUnit>`
  |
  = note: the following trait bounds were not satisfied:
          `NSObject: AsRef<NSUnit>`
